--- a/database/userconfig.json
+++ b/database/userconfig.json
@@ -5,14 +5,16 @@
 			"name": "string",
 			"password": "string",
 			"banji": "string",
-			"age": "intnumber"
+			"age": "intnumber",
+			"sex":"strng"
 		},
 		{
 			"xuehao": "111222",
 			"name": "Admin",
 			"password": "111222",
 			"banji": "string",
-			"age": "intnumber"
+			"age": "intnumber",
+			"sex":"strng"
 		}
 	],
 	"visualuser": [
@@ -22,7 +24,8 @@
 			"password": "123",
 			"banji": "wanggong1901",
 			"banjistr": "网络工程1901",
-			"age": "123"
+			"age": "123",
+			"sex": "男"
 		},
 		{
 			"xuehao": "1234",
@@ -30,7 +33,8 @@
 			"password": "1234",
 			"banji": "ruangong1901",
 			"banjistr": "软件工程1901",
-			"age": "123"
+			"age": "123",
+			"sex": "男"
 		},
 		{
 			"xuehao": "12345",
@@ -38,7 +42,8 @@
 			"password": "12345",
 			"banji": "jike1901",
 			"banjistr": "计科1901",
-			"age": "123"
+			"age": "123",
+			"sex": "男"
 		}
 	]
 }
